--- a/robot_vistool/package.xml
+++ b/robot_vistool/package.xml
@@ -14,6 +14,7 @@
   <depend>robot_state_publisher</depend>
   <depend>cv_bridge</depend>
   <depend>foxglove_bridge</depend>
+  <depend>isaac-ros-nitros-bridge-interfaces</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
