--- a/int-ball2_control/CMakeLists.txt
+++ b/int-ball2_control/CMakeLists.txt
@@ -24,6 +24,7 @@ install(DIRECTORY
   rviz
   launch
   scripts
+  description
   DESTINATION share/${PROJECT_NAME})
 
 # Install Python executables
