--- a/int-ball2_isaac_sim/CMakeLists.txt
+++ b/int-ball2_isaac_sim/CMakeLists.txt
@@ -7,6 +7,7 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(isaac_ros_nitros REQUIRED)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
