--- a/int-ball2_isaac_sim/package.xml
+++ b/int-ball2_isaac_sim/package.xml
@@ -9,6 +9,8 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <depend>isaac_ros_nitros</depend>
+
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
   
