--- a/ib2_msgs/package.xml
+++ b/ib2_msgs/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>ib2_interfaces</name>
+  <name>ib2_msgs</name>
   <version>0.0.0</version>
   <description>The ib2_interfaces package for controlling Int-Ball 2</description>
   <maintainer email="valentin.cardenas.keith@spacedata.co.jp">Keith Valentin</maintainer>
