--- a/int-ball2_data_replay/package.xml
+++ b/int-ball2_data_replay/package.xml
@@ -7,12 +7,17 @@
   <maintainer email="sintharit1716@gmail.com">tharitubun</maintainer>
   <license>TODO: License declaration</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
-  <buildtool_depend>ament_cmake_python</buildtool_depend>
+  <buildtool_depend>ament_cmake_ros</buildtool_depend>
 
-  <depend>rclpy</depend>
+  <depend>ament_cmake_auto</depend>
   <depend>ib2_msgs</depend>
   <depend>geometry_msgs</depend>
+  <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
+  <depend>tf2</depend>
+  <depend>tf2_eigen</depend>
+  <depend>tf2_geometry_msgs</depend>
+  <depend>tf2_ros</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
