--- a/int-ball2_isaac_sim/CMakeLists.txt
+++ b/int-ball2_isaac_sim/CMakeLists.txt
@@ -11,20 +11,25 @@ find_package(isaac_ros_nitros REQUIRED)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # comment the line when a copyright and license is added to all source files
   set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # comment the line when this package is in a git repo and when
-  # a copyright and license is added to all source files
   set(ament_cmake_cpplint_FOUND TRUE)
   ament_lint_auto_find_test_dependencies()
 endif()
 
 install(DIRECTORY
-  launch
   assets
+  launch
+  scripts
   DESTINATION share/${PROJECT_NAME})
 
+# install Python executables
+install(
+  PROGRAMS
+    scripts/create_isaacsim_stage.py
+    scripts/open_isaacsim_stage.py
+    scripts/run_isaacsim.py
+  DESTINATION
+    lib/${PROJECT_NAME}
+)
 
 ament_package()
