update control package name to `ib2_control`

--- a/int-ball2_control/package.xml
+++ b/int-ball2_control/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>int-ball2_control</name>
+  <name>ib2_control</name>
   <version>0.0.0</version>
   <description>Int-Ball2 control package</description>
   <maintainer email="tharit.sinsunthorn.r1@dc.tohoku.ac.jp">mslaptop2</maintainer>
