--- a/int-ball2_nav/package.xml
+++ b/int-ball2_nav/package.xml
@@ -19,7 +19,7 @@
   <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>example_interfaces</depend>
-  <depend>ib2_interfaces</depend>
+  <depend>ib2_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
